# Project-WebHunter

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  default_wordlist.txt  src.xss.rs
docs/: Architecture.md
pseudo-code/: 00-PROJECT-OVERVIEW.md  01-MAIN.md  02-CRAWLER.md  03-XSS-SCANNER.md  04-SQL-INJECTION-SCANNER.md  05-FILE-INCLUSION-SCANNER.md  06-DIRECTORY-SCANNER.md  07-REPORTER.md  08-SUPPORTING-MODULES.md  09-403-BYPASS-SCANNER.md  INDEX.md  QUICKSTART.md  README.md  SUMMARY.txt
src/: access_control_scanner.rs  animation.rs  auth_bypass_scanner.rs  blind_xss_scanner.rs  blind_xss_server.rs  bypass_403.rs  cors_scanner.rs  crawler.rs  csrf_scanner.rs  dependency_manager.rs  dir_scanner.rs  dom_xss_scanner.rs  exposed_files_scanner.rs  file_inclusion_scanner.rs  main.rs  rate_limiter.rs  reporter.rs  snapshot.rs  sql_injection_scanner.rs  ssrf_scanner.rs  xss.rs
webhunter/: Cargo.toml  README.md
webhunter/pseudo-code/: 00-PROJECT-OVERVIEW.md  02-CRAWLER.md  07-REPORTER.md  08-SUPPORTING-MODULES.md  INDEX.md  QUICKSTART.md
webhunter/src/: animation.rs  bypass_403.rs  crawler.rs  csrf_scanner.rs  dir_scanner.rs  dom_xss_scanner.rs  file_inclusion_scanner.rs  form.rs  main.rs  reporter.rs  sql_injection_scanner.rs  xss.rs
webhunter/wordlists/access_control/: sensitive_paths.txt
webhunter/wordlists/sql_injection/: error_based.txt  original_payloads.txt
webhunter/wordlists/xss/: obfuscation_payloads.txt  original_payloads.txt
wordlists/: directories.txt  files.txt  http_headers.txt  methods.txt  user_agents.txt
(+15 files in other folders)
